Convertendo mp4 para webm, formato aceito pelo html5 para videos.
Adicionei as linhas de video webm, para funcionar em dispositivos moveis.

--- a/verao2015.html
+++ b/verao2015.html
@@ -20,6 +20,7 @@
 		<div class="header-unit">
 			<div id="video-container">
 				<video autoplay loop preload="auto" class="fillWidth" id="verao2015">
+					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm"/>
 					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4"/>
 				</video>
 			</div><!-- end video-container -->
