--- a/verao2015.html
+++ b/verao2015.html
@@ -19,9 +19,9 @@
     <body>
 		<div class="header-unit">
 			<div id="video-container">
-				<video autoplay loop preload="auto" class="fillWidth" id="verao2015">
-					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm"/>
-					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4"/>
+				<video autoplay loop preload class="fillWidth" id="verao2015">
+					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015HD.webm" type="video/webm">
+					<source src="https://s3-us-west-2.amazonaws.com/ichose/site/hotsite/img/verao2015SD.mp4" type="video/mp4">
 				</video>
 			</div><!-- end video-container -->
 		</div><!-- end .header-unit -->
@@ -67,6 +67,8 @@
 	<script>
 		myVid=document.getElementById("verao2015");
   		myVid.volume=0.0;
+  		myVid.webkitEnterFullscreen();
+  		myVid.play();
 	</script> 
 	<script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.2/angular.min.js"></script>
